@@ -1247,6 +1247,7 @@ Jerry Seutter
 Pete Sevander
 Denis Severson
 Ian Seyer
+Dmitry Shachnev
 Daniel Shahaf
 Ha Shao
 Mark Shannon
